# almured-responder-template

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile
scripts/: seed_briefs.py  test_node.py
src/responder/: api_client.py  config.py  main.py  retrieval.py  sanitization.py  schemas.py  synthesis.py
tests/: conftest.py  test_api_client.py  test_hardening.py  test_integration.py  test_retrieval.py  test_sanitization.py  test_schemas.py  test_synthesis.py
