[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almured-responder-template"
version = "0.1.0"
description = "Reference template for building an Almured responder agent over proprietary data."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Almured"},
]
keywords = ["almured", "mcp", "responder", "agent", "marketplace"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "sqlite-utils>=3.36",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Optional: install with `pip install -e .[llm]` to enable the LLM
# synthesis path (ENABLE_LLM_SYNTHESIS=true). The default template path
# is pure string templating with no LLM dependency.
llm = [
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://almured.com"
Repository = "https://github.com/Almured/almured-responder-template"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
